--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
 .App {
   text-align: center;
+  background: #1c1c1c;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  width: 317px;
+  background: #1a1b21;
+  border-radius: 10px;
+  margin: auto;
+  padding-top: 44px;
+  padding-bottom: 44px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0px 36px;
+}
+
+.content--name {
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-top: 21px;
+  padding-bottom: 6.2px;
+}
+
+.content--post {
+  color: #f3bf99;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12.8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 8.8px;
+}
+
+.content--website {
+  color: #f5f5f5;
+  text-align: center;
+  font-family: Inter;
+  font-size: 10.24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 15px;
+}
+
+.button-content {
+  display: flex;
+  flex-direction: row;
+  gap: 17px;
+  margin-bottom: 33px;
+}
+
+.button-email,
+.button-linkedin {
+  display: flex;
+  width: 115px;
+  padding: 9px 13px 9px 11px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 8px;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.button-email {
+  color: var(--gray-700, #374151);
+  border-radius: 6px;
+  border: 1px solid var(--gray-300, #d1d5db);
+  background: var(--white, #fff);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-linkedin {
+  color: #fff;
+  border-radius: 6px;
+  background: #5093e2;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
+}
+
+.content--heading {
+  margin-bottom: 5px;
+  display: block;
+  text-align: left;
+  color: #f5f5f5;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+.content--para {
+  margin-bottom: 25px;
+  text-align: left;
+  color: #dcdcdc;
+  font-family: Inter;
+  font-size: 10.24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.content--footer {
+  background: #161619;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  padding: 20px 0;
+  justify-content: center;
+  width: 100%;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.content--footer > img {
+  width: 25px;
 }
